@@ -1,3 +1,8 @@
+2011-02-11	Ralf Corsépius <ralf.corsepius@rtems.org>
+
+	* rtems/score/cpu.h, rtems/score/sparc.h:
+	Use "__asm__" instead of "asm" for improved c99-compliance.
+
 2010-11-16	Joel Sherrill <joel.sherrill@oarcorp.com>
 
 	* cpu.c: Remove unused variable reported by clang.
